--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -58,17 +58,17 @@ feng_SOURCES =	main.c \
 
 feng_LDADD =	$(top_srcdir)/eventloop/libeventloop.la \
 		$(top_srcdir)/rtsp/librtsp.la \
-		$(top_srcdir)/sdp/libsdp.la \
 		$(top_srcdir)/sdp2/libsdp2.la \
 		$(top_srcdir)/schedule/libschedule.la \
-		$(top_srcdir)/intnet/libintnet.la \
 		$(top_srcdir)/rtcp/librtcp.la \
 		$(top_srcdir)/rtp/librtp.la \
-		$(top_srcdir)/mediainfo/libmediainfo.la \
 		$(top_srcdir)/mediathread/libmediath.la \
 		$(top_srcdir)/bufferpool/libbufferpool.la \
 		$(top_srcdir)/xmlparser/libxmlparser.la \
-		$(top_srcdir)/multicast/libmulticast.la 
+		$(top_srcdir)/multicast/libmulticast.la
+#		$(top_srcdir)/intnet/libintnet.la
+#		$(top_srcdir)/mediainfo/libmediainfo.la
+#		$(top_srcdir)/sdp/libsdp.la
 
 if FENICE_STUN
 feng_LDADD += $(top_srcdir)/stunserver/libstunserver.la \
