Freebsd fixes from Diego

--- a/configure.ac
+++ b/configure.ac
@@ -174,6 +174,9 @@ else
         fenice_cert=$with_ssl
 fi
 
+AC_CHECK_LIB([c], [shm_open], [SHM_LIB=], 
+	[AC_CHECK_LIB([rt], [shm_open], [SHM_LIB=-lrt])])
+
 AC_SUBST(fenice_cert)
 fenice_state_dir=${localstatedir}/local/lib/feng/certs
 AC_SUBST(fenice_state_dir)
@@ -205,18 +208,20 @@ fi
 
 dnl Check for SCTP support
 if test "$enable_sctp" = "yes"; then
-        AC_CHECK_TYPE(struct sctp_sndrcvinfo,
-		 AC_CHECK_LIB(sctp,sctp_recvmsg,
-				AC_DEFINE([HAVE_SCTP_FENICE], 1, [Define SCTP support]) \
-				AM_CONDITIONAL(FENICE_SCTP, [test "$enable_sctp" = "yes"]) \
-				sctp_msg="sctp enabled ................... : yes",
-				AC_MSG_WARN([SCTP not available]) \
-				AM_CONDITIONAL(FENICE_SCTP, [test "$enable_sctp" != "yes"]) \
-				sctp_msg="sctp enabled ................... : no"),
-		AC_MSG_WARN([SCTP not available]) \
-		AM_CONDITIONAL(FENICE_SCTP, [test "$enable_sctp" != "yes"]) \
+        AC_CHECK_TYPE(struct sctp_sndrcvinfo, [
+		 AC_CHECK_LIB(sctp,sctp_recvmsg, [
+				AC_DEFINE([HAVE_SCTP_FENICE], 1, [Define SCTP support])
+				AM_CONDITIONAL(FENICE_SCTP, [test "$enable_sctp" = "yes"])
+				sctp_msg="sctp enabled ................... : yes"
+				], [
+				AC_MSG_WARN([SCTP not available])
+				AM_CONDITIONAL(FENICE_SCTP, [test "$enable_sctp" != "yes"])
+				sctp_msg="sctp enabled ................... : no"
+				])], [
+		AC_MSG_WARN([SCTP not available])
+		AM_CONDITIONAL(FENICE_SCTP, [test "$enable_sctp" != "yes"])
 		sctp_msg="sctp enabled ................... : no",
-		[#include <netinet/sctp.h>])
+		[#include <netinet/sctp.h>]])
 	
 else
         AC_MSG_WARN([SCTP disabled: check skipped.])
