Updated lavf/lavu support

--- a/mediathread/Makefile.am
+++ b/mediathread/Makefile.am
@@ -6,16 +6,18 @@ noinst_LTLIBRARIES = libmediath.la
 libmediath_la_SOURCES =	cache.c \
 			demuxer.c \
 			demuxer_sd.c \
-			demuxer_avf.c \
 			descriptionAPI.c \
 			InputStream.c \
 			MediaParser.c \
 			mediathread.c \
 			mediautils.c \
 			mpeg12.c \
-			h264.c \
 			mpegaudio.c 
-			
-			
+
+if FENICE_FFMPEG
+libmediath_la_SOURCES += demuxer_avf.c \
+			 h264.c
+endif
+
 libmediath_la_LDFLAGS = -static
 INCLUDES = -I$(feniceincludedir) -I$(top_srcdir)
