Updated port parameter in config file and man page.

--- a/etc/feng.conf.in
+++ b/etc/feng.conf.in
@@ -1,6 +1,7 @@
 #include <config.h>
 root=FENICE_AVROOT_DIR_DEFAULT
-port=FENICE_RTSP_PORT_DEFAULT
+tcp_port=FENICE_RTSP_PORT_DEFAULT
+sctp_port=-1
 max_session=FENICE_MAX_SESSION_DEFAULT
 log_file=FENICE_LOG_FILE_DEFAULT
 
