mpeg ts parser (enabling it)

--- a/mediathread/Makefile.am
+++ b/mediathread/Makefile.am
@@ -13,6 +13,7 @@ libmediath_la_SOURCES =	cache.c \
 			mediautils.c \
 			mpeg12.c \
 			mpegaudio.c \
+			mpeg2t.c \
 			demuxer_ds.c
 if FENICE_FFMPEG
 libmediath_la_SOURCES += demuxer_avf.c \
