Factorized common code from aac and mp4v-es.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,7 +8,8 @@ endif
 
 libutils_la_SOURCES =	NTP_time.c \
 			get_utc.c \
-			get_field.c
+			get_field.c \
+			sdp_utils.c
 
 libutils_la_LDFLAGS = -lm
 
