Implemented SET_PARAMETER in dumb mode. This solves 1m24s syndrome in realplayer!

--- a/rtsp/Makefile.am
+++ b/rtsp/Makefile.am
@@ -10,7 +10,8 @@ librtsp_la_SOURCES =	RTSP_utils.c \
 			RTSP_pause.c \
 			RTSP_teardown.c \
 			RTSP_options.c \
-			RTSP_describe.c
+			RTSP_describe.c \
+			RTSP_set_parameter.c
 			 
 						
 librtsp_la_LDFLAGS = -static
