Cleanup utils part1

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,9 +6,7 @@ if FENICE_VERBOSE
 noinst_LTLIBRARIES += libdebug.la
 endif
 
-libutils_la_SOURCES =	NTP_time.c \
-			get_utc.c \
-			get_field.c \
+libutils_la_SOURCES =	get_field.c \
 			sdp_utils.c
 
 libutils_la_LDFLAGS = -lm
