command_environment -> conf

--- a/configure.ac
+++ b/configure.ac
@@ -296,7 +296,7 @@ AC_CONFIG_FILES([sdp2/Makefile])
 AC_CONFIG_FILES([src/Makefile])
 AC_CONFIG_FILES([schedule/Makefile])
 AC_CONFIG_FILES([multicast/Makefile])
-AC_CONFIG_FILES([command_environment/Makefile])
+AC_CONFIG_FILES([conf/Makefile])
 AC_CONFIG_FILES([docs/Makefile])
 AC_CONFIG_FILES([etc/Makefile])
 AC_CONFIG_FILES([avroot/Makefile])
