Cleanup part3 move prefs away

--- a/conf/Makefile.am
+++ b/conf/Makefile.am
@@ -1,8 +1,7 @@
 
 feniceincludedir = $(top_srcdir)/include
 
-noinst_LTLIBRARIES = libcommand.la
-libcommand_la_SOURCES =	command_environment.c 
-			
-libcommand_la_LDFLAGS = -static
+noinst_LTLIBRARIES = libconf.la
+libconf_la_SOURCES =	command_environment.c prefs.c
+
 INCLUDES = -I$(feniceincludedir) -I$(top_srcdir)
