move args parsing in main

--- a/conf/Makefile.am
+++ b/conf/Makefile.am
@@ -2,6 +2,6 @@
 feniceincludedir = $(top_srcdir)/include
 
 noinst_LTLIBRARIES = libconf.la
-libconf_la_SOURCES =	command_environment.c prefs.c
+libconf_la_SOURCES = prefs.c
 
 INCLUDES = -I$(feniceincludedir) -I$(top_srcdir)
