lighttpd array, buffer and stream imported, configration parsing halfway

--- a/conf/Makefile.am
+++ b/conf/Makefile.am
@@ -4,4 +4,11 @@ feniceincludedir = $(top_srcdir)/include
 noinst_LTLIBRARIES = libconf.la
 libconf_la_SOURCES = prefs.c
 
+noinst_LTLIBRARIES += liblight.la
+liblight_la_SOURCES = array.c \
+		      buffer.c \
+		      stream.c \
+		      configparser.c
+##		      configfile.c
+
 INCLUDES = -I$(feniceincludedir) -I$(top_srcdir)
